# equilia

./: .gitignore  Cargo.toml  README.md  design.md
.github/workflows/: rust.yml
client/src/: main.rs
src/: column.rs  encoding.rs  lens.rs  lib.rs  schema.rs  table.rs  value.rs  view.rs
src/column/: boolcolumn.rs  bytes.rs  encoding.rs  storage.rs  u64_16.rs  u64_32.rs  u64_32column.rs  u64_8d.rs  u64_generic.rs  u64column.rs  u64dense.rs
src/column/storage/: bytes.rs  file.rs
src/parser/: lexer.rs
