[package]
name = "equilia"
version = "0.1.0"
edition = "2021"
authors = ["David Roundy <daveroundy@gmail.com>"]

description = "Columnar data store"
license = "MIT OR Apache-2.0"
repository = "https://github.com/droundy/equilia"

readme = "README.md"

[dependencies]
thiserror = "1.0.38"

[dev-dependencies]
expect-test = "1.4.0"
tempfile = "3.3.0"

[[bin]]
name = "client"
path = "client/src/main.rs"
test = true
